theme selector done

--- a/src/scss/global/_colors.scss
+++ b/src/scss/global/_colors.scss
@@ -1,7 +1,10 @@
 //variables
-$Dark-Blue-dark-mode-elements:hsl(209, 23%, 22%);
-$Dark-Blue-dark-mode-background:hsl(207, 26%, 17%);
-$Dark-Blue-light-mode-text: hsl(200, 15%, 8%);
-$Dark-gray-light-mode-input:hsl(0, 0%, 52%);
-$Light-gray-light-mode-background:hsl(0, 0%, 98%);
-$General-white:hsl(0, 0%, 100%)
+$Primary-color:rgba(87, 255, 218, 1);
+$Dark-bg:rgba(0, 0, 0, 1);
+$Dark-altbg:rgba(26, 26, 26, 1);
+$Dark-text:#eee;
+$Dark-headings:rgba(255, 255, 255, 1);
+$Light-bg:rgba(255, 255, 255, 1);
+$Light-altbg:rgba(255, 255, 255, .9);
+$Light-text:rgba(102, 102, 102, 1);
+$Light-headings:rgba(0, 0, 0, 1);
