--- a/src/scss/global/_colors.scss
+++ b/src/scss/global/_colors.scss
@@ -1,6 +1,6 @@
 //variables
 $Primary-color:rgba(87, 255, 218, 1);
-$Dark-bg:rgba(0, 0, 0, 1);
+$Dark-bg:rgba(0, 0, 0, .95);
 $Dark-altbg:rgba(26, 26, 26, 1);
 $Dark-text:#eee;
 $Dark-headings:rgba(255, 255, 255, 1);
