--- a/src/scss/global/_colors.scss
+++ b/src/scss/global/_colors.scss
@@ -1,10 +1,11 @@
 //variables
 $Primary-color:rgba(87, 255, 218, 1);
+$Primary-colorAlt:rgba(87, 255, 218, .4);
 $Dark-bg:rgba(0, 0, 0, .95);
 $Dark-altbg:rgba(26, 26, 26, 1);
 $Dark-text:#eee;
 $Dark-headings:rgba(255, 255, 255, 1);
-$Light-bg:rgba(255, 255, 255, 1);
+$Light-bg:rgba(255, 255, 255, .5);
 $Light-altbg:rgba(255, 255, 255, .9);
 $Light-text:rgba(102, 102, 102, 1);
 $Light-headings:rgba(0, 0, 0, 1);
