--- a/src/Components/Fixed_menu/fixed.module.scss
+++ b/src/Components/Fixed_menu/fixed.module.scss
@@ -1,6 +1,43 @@
+@use '../../scss/global/colors'as *;
+@use '../../scss/utils/functions'as fn;
+
 .fixed {
     position: fixed;
-    bottom: 0;
+    bottom: -1px;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    background-color: $Dark-bg;
+    padding: 1rem;
+
+    .ul {
+        .li {
+            .lists {
+                font-size: fn.rem(25);
+                font-weight: 700;
+
+                .span {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+
+                    .text {
+                        font-size: fn.rem(12);
+                        font-weight: 300;
+
+                        @media screen and (min-width: 500px) {
+                            font-size: fn.rem(14);
+                        }
+                    }
+                }
+            }
+
+            .active {
+                color: $Primary-color;
+            }
+
+        }
+    }
 
     @media screen and (min-width: 768px) {
         display: none;
