--- a/src/Components/Custom_select/custom_select.module.scss
+++ b/src/Components/Custom_select/custom_select.module.scss
@@ -7,6 +7,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    z-index:10;
 
     .currentSelected {
         width: 100%;
@@ -16,6 +17,7 @@
         padding: .3rem .5rem;
         justify-content: space-between;
         align-items: center;
+        z-index: 10;
         &:hover{
             cursor: pointer;
         }
@@ -38,6 +40,7 @@
         border: 1px solid $Primary-color;
         left: 0;
         bottom: -4.5rem;
+        z-index: 10;
         
         .rep{
             display: flex;
