--- a/src/Layout/Navigation/navigation.module.scss
+++ b/src/Layout/Navigation/navigation.module.scss
@@ -11,6 +11,7 @@
         align-items: center;
         position: sticky;
         top: 0;
+        z-index: 10;
 
         @media screen and (min-width: 768px) {
             height: 5.5rem;
