--- a/src/Pages/Home/Hero_section/hero.module.scss
+++ b/src/Pages/Home/Hero_section/hero.module.scss
@@ -114,9 +114,10 @@
                     .Info {
                         display: flex;
                         flex-direction: column;
-                       justify-content: flex-start;
-                       align-items: flex-start;
+                        justify-content: flex-start;
+                        align-items: flex-start;
                         position: relative;
+                        margin-bottom: 1rem;
 
                         .rating {
                             display: flex;
@@ -127,7 +128,8 @@
                             .percentage {
                                 position: absolute;
                                 display: flex;
-                                .per{
+
+                                .per {
                                     font-size: 10px;
                                 }
                             }
