--- a/src/Pages/Home/Hero_section/Content/content.module.scss
+++ b/src/Pages/Home/Hero_section/Content/content.module.scss
@@ -1,4 +1,6 @@
-@use '../../../../scss/utils/functions' as fn;
+@use '../../../../scss/utils/functions'as fn;
+@use '../../../../scss/utils/_fonts.scss'as *;
+@use '../../../../scss/global/colors'as *;
 
 .content {
     position: absolute;
@@ -8,19 +10,21 @@
     align-items: flex-end;
     gap: 1rem;
 
+
     @media screen and (min-width:1024px) {
-        gap: 0;
+        gap: 3rem;
     }
 
     .poster {
         width: 35%;
         height: 35%;
         object-fit: contain;
+        border-radius: 10px 10px 0 0;
 
         @media screen and (min-width:1024px) {
             width: fn.rem(350);
-            height: fn.rem(350);
-            object-fit: contain;
+            height: fn.rem(500);
+            object-fit: cover;
         }
     }
 
@@ -30,6 +34,7 @@
         justify-content: flex-start;
         align-items: flex-start;
         position: relative;
+        gap: .5rem;
         margin-bottom: 1rem;
 
         .rating {
@@ -47,8 +52,63 @@
                 }
             }
         }
-        .btn{
+
+        .title {
+            font-size: fn.rem(14);
+
+            @media screen and (min-width:768px) {
+                font-size: fn.rem(24);
+            }
+
+            @media screen and (min-width:1200px) {
+                font-size: fn.rem(32);
+            }
+        }
+
+        .overView {
+            display: none;
+            margin-bottom: .5rem;
+            max-width: fn.rem(800);
+
+            @media screen and (min-width:768px) {
+                display: flex;
+            }
+        }
+
+        .genre {
+            display: none;
+            margin-bottom: .5rem;
+            font-family: $secondary-font;
+            gap: 1rem;
+
+            @media screen and (min-width:500px) {
+                display: flex;
+                flex-wrap: wrap;
+            }
+
+            .genreLists {
+                border: 1px solid #fff;
+                padding: .5rem 1rem;
+            }
+        }
+
+        .btn {
             display: flex;
+            gap: 1rem;
+            margin-top: .5rem;
+
+            @media screen and (max-width:300px) {
+                flex-direction: column;
+                gap: .5rem;
+            }
+
+            .icn {
+                font-size: fn.rem(18);
+
+                @media screen and (min-width:1200px) {
+                    font-size: fn.rem(20);
+                }
+            }
         }
 
     }
