--- a/src/Pages/Home/Hero_section/Content/content.module.scss
+++ b/src/Pages/Home/Hero_section/Content/content.module.scss
@@ -112,4 +112,14 @@
         }
 
     }
+    .modal {
+        inset: 0;
+        background-color: rgba(0, 0, 0, 1);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        z-index: 100;
+        
+    }
 }
