--- a/src/Pages/Home/Hero_section/hero.module.scss
+++ b/src/Pages/Home/Hero_section/hero.module.scss
@@ -7,7 +7,7 @@
     position: relative;
 
     @media screen and (min-width: 768px) {
-        height: fn.rem(580);
+        height: fn.rem(550);
     }
 
     .btn {
@@ -19,7 +19,7 @@
         top: 40%;
         position: absolute;
         transition: all 500ms ease-in-out;
-        z-index: 10;
+        z-index: 1;
         display: none;
 
         &:hover {
@@ -89,6 +89,16 @@
 
             }
 
+            .modal {
+                inset: 0;
+                background-color: rgba(0, 0, 0, .75);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                position: absolute;
+                z-index: 100;
+
+            }
         }
 
         .heroActive {
@@ -96,5 +106,8 @@
             transform: translateX(0);
             pointer-events: visible;
         }
+
     }
+
+
 }
