--- a/src/scss/global/_normalize.scss
+++ b/src/scss/global/_normalize.scss
@@ -84,6 +84,13 @@ body {
   }
 }
 
+.Headings {
+  font-size: fn.rem(25);
+
+  @media screen and (min-width: 768px) {
+    font-size: fn.rem(45);
+  }
+}
 
 .light {
   .bg {
@@ -98,7 +105,7 @@ body {
     font-weight: 400;
   }
 
-
+  
 }
 
 .dark {
@@ -110,4 +117,6 @@ body {
     color: $Dark-headings;
   }
 
+  
+  
 }
