--- a/src/scss/global/_normalize.scss
+++ b/src/scss/global/_normalize.scss
@@ -86,6 +86,7 @@ body {
 
 .Headings {
   font-size: fn.rem(25);
+  margin-block: 1rem;
 
   @media screen and (min-width: 768px) {
     font-size: fn.rem(45);
