--- a/src/Components/Display_card/display_card.module.scss
+++ b/src/Components/Display_card/display_card.module.scss
@@ -3,12 +3,15 @@
 
 .card {
     display: flex;
-    column-gap: 1rem;
+    column-gap:1.5rem;
 
     .displayCard {
         width: fn.rem(250);
         position: relative;
-        border-bottom-right-radius: 20px;
+        border-bottom-right-radius: 30px;
+        &:hover{
+            cursor: pointer;
+        }
 
         @media screen and (min-width: 768px) {
             width: fn.rem(310);
@@ -16,34 +19,48 @@
 
         .imgCard {
             width: 100%;
+            border-bottom-right-radius: 30px;
         }
 
-        .ratings {
+        .overlay {
             position: absolute;
-            bottom: 0;
-            right: 0;
-            background: #000;
-            color: #fff;
-            border-radius: 50%;
-        }
-
-        .info {
-            padding: 1rem;
-            gap: 2rem;
-
-            .popular {
-                display: flex;
-                align-items: center;
-                gap: .2rem;
-
-                .people {
-                    font-size: 20px;
-                }
+            inset: 0;
+            display: flex;
+            align-items: flex-end;
+                background:
+                    linear-gradient(transparent, rgba(0, 0, 0, .7), black);
+                width: 100%;
+                border-bottom-right-radius: 30px;
+            .ratings {
+                position: absolute;
+                bottom: 0;
+                right: 0;
+                background: #000;
+                color: #fff;
+                border-radius: 50%;
             }
-            .title{
-                margin-bottom: 1rem;
-                @media screen and (min-width: 768px) {
-                    margin-bottom: 2rem; 
+
+            .info {
+                padding: 1rem;
+                gap: 2rem;
+                color: #fff;
+
+                .popular {
+                    display: flex;
+                    align-items: center;
+                    gap: .2rem;
+
+                    .people {
+                        font-size: 20px;
+                    }
+                }
+
+                .title {
+                    margin-bottom: 2rem;
+
+                    @media screen and (min-width: 768px) {
+                        margin-bottom: 2.5rem;
+                    }
                 }
             }
         }
