--- a/src/scss/global/_normalize.scss
+++ b/src/scss/global/_normalize.scss
@@ -90,10 +90,27 @@ body {
 
 .Headings {
   font-size: fn.rem(25);
-  margin-block: 1rem;
 
   @media screen and (min-width: 768px) {
-    font-size: fn.rem(45);
+    font-size: fn.rem(35);
+  }
+}
+
+.HeadingsContainer {
+  margin-block: 2rem;
+
+  @media screen and (min-width: 768px) {
+    margin-block: 3rem;
+  }
+}
+
+.HeadingSub {
+  font-size: fn.rem(16);
+  font-family: $secondary-font;
+  opacity: .8;
+
+  @media screen and (min-width: 768px) {
+    font-size: fn.rem(20);
   }
 }
 
@@ -111,7 +128,7 @@ body {
   }
 
   .cardBg {
-    background-color:#faf8f8;
+    background-color: #faf8f8;
     color: #000;
   }
 }
