top rated slides

--- a/src/Components/Cards_wrapper/cards_wrapper.module.scss
+++ b/src/Components/Cards_wrapper/cards_wrapper.module.scss
@@ -5,6 +5,7 @@
         overflow: scroll;
         -ms-overflow-style: none;
         scrollbar-width: none;
+        scroll-behavior:smooth;
 
 
         .content {
