--- a/src/Components/Display_card/display_card.module.scss
+++ b/src/Components/Display_card/display_card.module.scss
@@ -1,15 +1,17 @@
 @use '../../scss/global/_colors.scss'as *;
 @use '../../scss/utils/functions'as fn;
+@use '../../scss/utils/fonts'as *;
 
 .card {
     display: flex;
-    column-gap:1.5rem;
+    column-gap: 1.5rem;
 
     .displayCard {
         width: fn.rem(250);
         position: relative;
         border-bottom-right-radius: 30px;
-        &:hover{
+
+        &:hover {
             cursor: pointer;
         }
 
@@ -19,7 +21,7 @@
 
         .imgCard {
             width: 100%;
-            border-bottom-right-radius: 30px;
+            border-top-right-radius: 30px;
         }
 
         .overlay {
@@ -27,13 +29,14 @@
             inset: 0;
             display: flex;
             align-items: flex-end;
-                background:
-                    linear-gradient(transparent, rgba(0, 0, 0, .7), black);
-                width: 100%;
-                border-bottom-right-radius: 30px;
+            background:
+                linear-gradient(transparent, rgba(0, 0, 0, .7), black);
+            width: 100%;
+            border-top-right-radius: 30px;
+
             .ratings {
                 position: absolute;
-                bottom: 0;
+                top: 0;
                 right: 0;
                 background: #000;
                 color: #fff;
@@ -56,10 +59,24 @@
                 }
 
                 .title {
-                    margin-bottom: 2rem;
+                    margin-bottom: .5rem;
 
                     @media screen and (min-width: 768px) {
-                        margin-bottom: 2.5rem;
+                        margin-bottom: 1rem;
+                    }
+                }
+
+                .genre {
+                    display: flex;
+                    flex-wrap: wrap;
+                    gap: .5rem;
+
+                    .lis {
+                        border: 1px solid #fff;
+                        padding: .5rem .5rem;
+                        font-family: $secondary-font;
+                        font-size: 14px;
+                        opacity: .95;
                     }
                 }
             }
