--- a/src/Pages/Home/Hero_section/Content/content.module.scss
+++ b/src/Pages/Home/Hero_section/Content/content.module.scss
@@ -79,7 +79,7 @@
             display: none;
             margin-bottom: .5rem;
             font-family: $secondary-font;
-            gap: 1rem;
+            gap: .5rem;
 
             @media screen and (min-width:500px) {
                 display: flex;
