--- a/src/Components/Display_card/display_card.module.scss
+++ b/src/Components/Display_card/display_card.module.scss
@@ -9,7 +9,7 @@
     .displayCard {
         width: fn.rem(250);
         position: relative;
-        border-bottom-right-radius: 30px;
+        border-top-right-radius: 30px;
 
         &:hover {
             cursor: pointer;
@@ -33,6 +33,11 @@
                 linear-gradient(transparent, rgba(0, 0, 0, .7), black);
             width: 100%;
             border-top-right-radius: 30px;
+            transition: all 500ms ease-in-out;
+
+            &:hover {
+                opacity: 0;
+            }
 
             .ratings {
                 position: absolute;
