--- a/src/scss/global/_normalize.scss
+++ b/src/scss/global/_normalize.scss
@@ -127,9 +127,9 @@ body {
 .light {
   .bg {
     background-color: #fff;
-    box-shadow: -2px -3px 6px 0px #eee;
-    -webkit-box-shadow: -2px -3px 6px 0px #eee;
-    -moz-box-shadow: -2px -3px 6px 0px rgba(122, 118, 118, 0.75);
+    box-shadow: .1px .1px 3px 0px #eee;
+    -webkit-box-shadow: .1px .1px 3px 0px #eee;
+    -moz-box-shadow: .1px .1px 3px 0px #eee;
   }
 
   .textFixed {
