--- a/src/Components/Container/container.module.scss
+++ b/src/Components/Container/container.module.scss
@@ -1,5 +1,5 @@
 .container {
-    margin-inline: .5rem;
+    margin-inline: 1.2rem;
     max-width: 1440px;
     
     @media screen and (min-width: 1440px) {
