--- a/src/Components/Button/button.module.scss
+++ b/src/Components/Button/button.module.scss
@@ -2,16 +2,18 @@
 @use '../../scss/utils/functions'as fn;
 
 .button {
-    width: 100%;
+    width: max-content;
     padding: .6rem;
-    background-color: $Dark-text;
     display: flex;
     align-items: center;
-    gap: .3rem;
     border-radius: 5px;
     font-size: fn.rem(14);
     transition: all 500ms ease-in-out;
     color: #000;
+
+    &:hover {
+        cursor: pointer;
+    }
 
     @media screen and (min-width: 600px) {
         padding: .8rem;
@@ -21,11 +23,6 @@
 
     @media screen and (min-width: 1440px) {
         font-size: fn.rem(18);
-    }
-
-    &:hover {
-        cursor: pointer;
-        background-color: #aaa;
     }
 
     &.watch {
