--- a/src/Components/Fixed_menu/fixed.module.scss
+++ b/src/Components/Fixed_menu/fixed.module.scss
@@ -9,6 +9,7 @@
     justify-content: space-between;
     background-color: $Dark-bg;
     padding: 1rem;
+    z-index: 10;
 
     .ul {
         .li {
