--- a/src/Layout/Navigation/navigation.module.scss
+++ b/src/Layout/Navigation/navigation.module.scss
@@ -75,6 +75,10 @@
                     }
                 }
             }
+            .actions{
+                display: flex;
+                gap: 1rem;
+            }
         }
     }
 }
