--- a/src/Components/Custom_select/custom_select.module.scss
+++ b/src/Components/Custom_select/custom_select.module.scss
@@ -16,6 +16,7 @@
         border: 1px solid $Primary-color;
         padding: .3rem .5rem;
         justify-content: space-between;
+        border-radius: 5px;
         align-items: center;
         z-index: 10;
         &:hover{
@@ -38,14 +39,16 @@
         width: 100%;
         background-color: rgba(0, 0, 0, 1);
         border: 1px solid $Primary-color;
+        border-radius: 5px;
+       
         left: 0;
-        bottom: -4.5rem;
+        bottom: -6.5rem;
         z-index: 10;
         
         .rep{
             display: flex;
             align-items: center;
-            padding: .1rem .5rem;
+            padding: .5rem .5rem;
             gap: .4rem;
             &:hover{
                 background-color: $Primary-colorAlt;
