--- a/src/Components/People_card/people_card.module.scss
+++ b/src/Components/People_card/people_card.module.scss
@@ -10,7 +10,10 @@
         width: fn.rem(200);
         height: fn.rem(200);
         border-radius: 50%;
-        
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
 
         &:hover {
             cursor: pointer;
@@ -26,9 +29,6 @@
             position: absolute;
             width: fn.rem(200);
             height: fn.rem(200);
-            display: flex;
-            align-items: center;
-            justify-content: center;
             color: #fff;
             border-radius: 50%;
             background-color: rgba(0, 0, 0, .7);
@@ -42,7 +42,8 @@
 
             .content {
                 text-align: center;
-                margin-top: 6rem;
+
+                margin-top: 8rem;
                 opacity: .9;
             }
         }
