--- a/src/Layout/Footer/footer.module.scss
+++ b/src/Layout/Footer/footer.module.scss
@@ -3,8 +3,10 @@
 @use '../../scss/utils/fonts'as *;
 
 .footer {
+    position: sticky;
+    top: 100%;
+    bottom: 10rem;
     margin-top: 4rem;
-    margin-bottom: 4.5rem;
     background-color: $Dark-bg;
 
     @media screen and (min-width:768px) {
