--- a/src/scss/global/_normalize.scss
+++ b/src/scss/global/_normalize.scss
@@ -6,6 +6,7 @@
 html {
   box-sizing: border-box;
   font-size: 100%;
+  height: 100%;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
@@ -83,8 +84,10 @@ img {
 }
 
 body {
+  min-height: 100%;
   margin: 0;
   padding: 0;
+  box-sizing: inherit;
   font-family: $primary-font;
   background-color: $Light-bg;
   font-weight: 400;
@@ -99,6 +102,8 @@ body {
     color: $Dark-text;
   }
 }
+
+
 
 .Headings {
   font-size: fn.rem(25);
