--- a/src/Components/Button/button.scss
+++ b/src/Components/Button/button.scss
@@ -12,11 +12,12 @@
     font-size: fn.rem(14);
     transition: all 500ms ease-in-out;
     font-weight: 500;
-
+    color: #666;
 
     &:hover {
         cursor: pointer;
     }
+
 
     @media screen and (min-width: 600px) {
         padding: .8rem;
@@ -24,17 +25,15 @@
         font-size: fn.rem(16);
     }
 
-   
+
 }
 
 
 .light {
     .CustomButton {
-        color: #666;
-
 
         &:hover {
-            background-color: #666;
+            background-color: #999;
         }
 
         &.genre {
@@ -62,27 +61,32 @@
             border: 1px solid $Primary-color;
             color: #fff;
             padding: .3rem 1rem;
-    
+
             &:hover {
                 background-color: transparent;
                 transform: scale(1.03);
             }
-    
+
             @media screen and (min-width: 600px) {
                 font-size: fn.rem(16);
                 color: #fff;
             }
         }
+
+        &.reload {
+            background-color: $Light-headings;
+            color: #eeee;
+        }
+
     }
 
 }
 
 .dark {
     .CustomButton {
-        color: #fff;
 
         &:hover {
-            background-color: #666;
+            background-color: #999;
         }
 
         &.genre {
@@ -108,16 +112,21 @@
             border: 1px solid $Primary-color;
             color: #fff;
             padding: .3rem 1rem;
-    
+
             &:hover {
                 background-color: transparent;
                 transform: scale(1.03);
             }
-    
+
             @media screen and (min-width: 600px) {
                 font-size: fn.rem(16);
                 color: #fff;
             }
+        }
+
+        &.reload {
+            background-color: $Dark-headings;
+            color: #111;
         }
     }
 }
