--- a/src/Components/Input/input.module.scss
+++ b/src/Components/Input/input.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     gap: 1rem;
     padding: .5rem;
-    margin-top: 1rem;
+    margin-block: 1.5rem;
     border-radius: 8px;
     width: max-content;
 
