--- a/src/Components/People_card/people_card.module.scss
+++ b/src/Components/People_card/people_card.module.scss
@@ -1,3 +1,20 @@
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*
 @use '../../scss/utils/functions'as fn;
 @use '../../scss/utils/fonts'as *;
 
@@ -49,3 +66,4 @@
         }
     }
 }
+*/
