--- a/src/Pages/Home/Hero_section/hero.module.scss
+++ b/src/Pages/Home/Hero_section/hero.module.scss
@@ -84,7 +84,7 @@
                 position: absolute;
                 inset: 0;
                 background:
-                    linear-gradient(transparent, rgba(0, 0, 0, .7), black);
+                    linear-gradient(transparent, rgba(0, 0, 0, .8), rgba(0, 0, 0, 1));
                 width: 100%;
 
             }
