--- a/src/Components/Display_card/display_card.module.scss
+++ b/src/Components/Display_card/display_card.module.scss
@@ -52,7 +52,7 @@
                 padding: 1rem;
                 gap: 2rem;
                 color: #fff;
-
+                opacity: .7;
                 .popular {
                     display: flex;
                     align-items: center;
