--- a/src/Layout/Footer/footer.module.scss
+++ b/src/Layout/Footer/footer.module.scss
@@ -21,6 +21,7 @@
 
         .logos {
             display: flex;
+            align-items: center;
             gap: 1rem;
 
             @media screen and (min-width:768px) {
