--- a/src/Routes/Movie_details/Movie_content/movie_content.module.scss
+++ b/src/Routes/Movie_details/Movie_content/movie_content.module.scss
@@ -57,6 +57,29 @@
                 position: relative;
                 gap: .5rem;
                 margin-bottom: 1rem;
+
+                .title {
+                    font-size: fn.rem(14);
+
+                    @media screen and (min-width:768px) {
+                        font-size: fn.rem(24);
+                    }
+
+                    @media screen and (min-width:1200px) {
+                        font-size: fn.rem(32);
+                    }
+                }
+
+                .overView {
+                    display: none;
+                    margin-bottom: .5rem;
+                    max-width: fn.rem(800);
+
+                    @media screen and (min-width:768px) {
+                        display: flex;
+                    }
+                }
+
                 .Genre {
                     display: none;
                     margin-bottom: .5rem;
@@ -73,6 +96,36 @@
                         padding: .5rem 1rem;
                     }
                 }
+
+                .btnPlay {
+                    font-size: fn.rem(20);
+
+                    @media screen and (min-width:768px) {
+                        font-size: fn.rem(25);
+                    }
+                }
+            }
+        }
+    }
+
+    .teaserOverlayContainer {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background: rgba(0, 0, 0, .85);
+        inset: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      
+
+        
+
+        .teaserOverlay {
+            width: 100%;
+            height: 100%;
+            @media screen and (min-width:1440px) {
+                width: 76%;
             }
         }
     }
