--- a/src/Routes/Movie_details/Movie_content/movie_content.module.scss
+++ b/src/Routes/Movie_details/Movie_content/movie_content.module.scss
@@ -1,5 +1,6 @@
 @use '../../../scss/utils/functions'as fn;
 @use '../../../scss/utils/fonts'as *;
+@use '../../../scss/global/colors'as *;
 
 .movieHero {
     position: relative;
@@ -117,15 +118,36 @@
         display: flex;
         justify-content: center;
         align-items: center;
-      
 
-        
 
         .teaserOverlay {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
             width: 100%;
             height: 100%;
+
             @media screen and (min-width:1440px) {
                 width: 76%;
+            }
+
+            .close {
+                .icn {
+                    margin-block: 1rem;
+                    margin-right: 1rem;
+                    font-size: fn.rem(22);
+                    color: $Primary-color;
+
+                    &:hover {
+                        cursor: pointer;
+                    }
+
+                    @media screen and (min-width:1440px) {
+                        margin-right: 0;
+                        font-size: fn.rem(28);
+                    }
+
+                }
             }
         }
     }
