--- a/src/Routes/Movie_details/Movie_content/movie_content.module.scss
+++ b/src/Routes/Movie_details/Movie_content/movie_content.module.scss
@@ -3,13 +3,16 @@
 @use '../../../scss/global/colors'as *;
 
 .movieHero {
-    position: relative;
+    position:sticky;
+    top: 0;
     display: flex;
     width: 100%;
     height: fn.rem(400);
+    z-index: 2;
+   
 
     @media screen and (min-width: 768px) {
-        height: fn.rem(550);
+        height: fn.rem(600);
     }
 
     .backDrop {
@@ -32,6 +35,7 @@
             display: flex;
             align-items: flex-end;
             gap: 1rem;
+            margin-bottom: 1rem;
 
             @media screen and (min-width:768px) {
                 gap: 3rem;
@@ -57,7 +61,7 @@
                 align-items: flex-start;
                 position: relative;
                 gap: .5rem;
-                margin-bottom: 1rem;
+                
 
                 .title {
                     font-size: fn.rem(14);
@@ -144,13 +148,14 @@
             width: 100%;
             height: 100%;
 
+            padding-bottom: 2rem;
             @media screen and (min-width:1440px) {
-                width: 76%;
+                width: 68%;
             }
 
             .close {
                 .icn {
-                    margin-block: 1rem;
+                    margin-block: .5rem;
                     margin-right: 1rem;
                     font-size: fn.rem(22);
                     color: $Primary-color;
