--- a/src/Routes/Movie_details/Movie_Information/Base_information/base.module.scss
+++ b/src/Routes/Movie_details/Movie_Information/Base_information/base.module.scss
@@ -13,6 +13,7 @@
 
         .overlay {
             position: absolute;
+            height: 100%;
             inset: 0;
             background-color: rgba(0, 0, 0, .5);
             display: flex;
