--- a/src/Routes/Movie_details/Movie_Information/movie_infomation.module.scss
+++ b/src/Routes/Movie_details/Movie_Information/movie_infomation.module.scss
@@ -20,6 +20,7 @@
 
         .wrapper {
             width: 100%;
+
             @media screen and (min-width: 1440px) {
                 width: 75%;
             }
@@ -27,9 +28,50 @@
 
         .others {
             width: 100%;
+            display: flex;
+            align-items: center;
+            margin-top: 2rem;
+            gap: 1rem;
+            flex-wrap: wrap;
 
             @media screen and (min-width: 1440px) {
                 width: 25%;
+                display: initial;
+            }
+
+            .link {
+                display: flex;
+                align-items: center;
+                color: #fff;
+                font-size: 20px;
+                gap: .5rem .6rem;
+                border: .5px solid #999;
+                padding: .5rem;
+                border-radius: 10px;
+                justify-content: flex-start;
+
+                .linktext {
+                    font-size: 16px;
+                }
+            }
+
+            .linkalt {
+                display: flex;
+                align-items: center;
+                gap: .5rem;
+                font-size: 16px;
+                border: 1px solid #eee;
+                padding: .5rem .8rem;
+                border-radius: 10px;
+            }
+
+            .money {
+                display: flex;
+                gap: .5rem;
+                font-size: 16px;
+                border: 1px solid #eee;
+                padding: .5rem 1rem;
+                border-radius: 10px;
             }
         }
     }
