--- a/src/Routes/Movie_details/Movie_content/movie_content.module.scss
+++ b/src/Routes/Movie_details/Movie_content/movie_content.module.scss
@@ -3,16 +3,16 @@
 @use '../../../scss/global/colors'as *;
 
 .movieHero {
-    position:sticky;
+    position: sticky;
     top: 0;
     display: flex;
     width: 100%;
-    height: fn.rem(400);
+    height: fn.rem(350);
     z-index: 2;
-   
+
 
     @media screen and (min-width: 768px) {
-        height: fn.rem(600);
+        height: fn.rem(550);
     }
 
     .backDrop {
@@ -35,7 +35,7 @@
             display: flex;
             align-items: flex-end;
             gap: 1rem;
-            margin-bottom: 1rem;
+            margin-bottom: .8rem;
 
             @media screen and (min-width:768px) {
                 gap: 3rem;
@@ -61,7 +61,7 @@
                 align-items: flex-start;
                 position: relative;
                 gap: .5rem;
-                
+
 
                 .title {
                     font-size: fn.rem(14);
@@ -107,7 +107,8 @@
                     font-size: 14px;
                     font-family: $secondary-font;
                     gap: .5rem;
-                    @media screen and (min-width:768px){
+
+                    @media screen and (min-width:768px) {
                         font-size: 20px;
                     }
 
@@ -115,7 +116,7 @@
                         display: flex;
                         align-items: center;
                         gap: .5rem;
-                      
+
                     }
                 }
 
@@ -149,6 +150,7 @@
             height: 100%;
 
             padding-bottom: 2rem;
+
             @media screen and (min-width:1440px) {
                 width: 68%;
             }
