--- a/src/Components/MediaHero/Movie_content/movie_content.module.scss
+++ b/src/Components/MediaHero/Movie_content/movie_content.module.scss
@@ -7,12 +7,12 @@
     top: 0;
     display: flex;
     width: 100%;
-    height: fn.rem(350);
+    height: fn.rem(330);
     background: #000;
     z-index: 2;
 
-
     @media screen and (min-width: 768px) {
+        position: relative;
         height: fn.rem(550);
     }
 
@@ -153,26 +153,7 @@
             padding-bottom: 2rem;
 
             @media screen and (min-width:1440px) {
-                width: 68%;
-            }
-
-            .close {
-                .icn {
-                    margin-block: .5rem;
-                    margin-right: 1rem;
-                    font-size: fn.rem(22);
-                    color: $Primary-color;
-
-                    &:hover {
-                        cursor: pointer;
-                    }
-
-                    @media screen and (min-width:1440px) {
-                        margin-right: 0;
-                        font-size: fn.rem(28);
-                    }
-
-                }
+                width: 1440px;
             }
         }
     }
