--- a/src/scss/global/_normalize.scss
+++ b/src/scss/global/_normalize.scss
@@ -188,6 +188,10 @@ body {
     opacity: 1;
     color: #aaa;
   }
+
+  .displayPic {
+    background-color: #fff;
+  }
 }
 
 .dark {
@@ -233,4 +237,7 @@ body {
     color: #aaa;
   }
 
+  .displayPic {
+    background-color: #000;
+  }
 }
