--- a/src/Routes/People_details/people.module.scss
+++ b/src/Routes/People_details/people.module.scss
@@ -112,7 +112,7 @@
         display: flex;
         margin-top: 2rem;
         justify-content: space-between;
-       
+
 
         .options {
             display: flex;
@@ -121,13 +121,14 @@
             padding: 1rem 1rem 0 1rem;
             opacity: .5;
             transition: all 500ms ease-in-out;
+
             @media screen and (min-width:600px) {
                 padding: 1rem 3rem 0 3rem;
             }
 
             &:hover {
                 cursor: pointer;
-                background-color:rgba(255, 255, 255, .08);
+                background-color: rgba(255, 255, 255, .08);
                 opacity: 1;
             }
 
@@ -140,6 +141,7 @@
 
         .optionsAlt {
             opacity: 1;
+            font-weight: 550;
         }
     }
 
@@ -147,6 +149,7 @@
         width: 100%;
         height: 1px;
         background-color: #999;
+        margin-bottom: 1rem;
         opacity: .5;
     }
 
