--- a/src/Pages/People/people.module.scss
+++ b/src/Pages/People/people.module.scss
@@ -1,11 +1,17 @@
-.peopleContainer {
+.People {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 
-    .people {
-        margin-top: 3rem;
-    }
-    .ast{
-        display: flex;
-        justify-content: center;
-        margin-top: 4rem;
+    .peopleContainer {
+        .people {
+            margin-top: 3rem;
+        }
+
+        .ast {
+            display: flex;
+            justify-content: center;
+            margin-top: 4rem;
+        }
     }
 }
