--- a/src/Routes/People_details/people.module.scss
+++ b/src/Routes/People_details/people.module.scss
@@ -2,154 +2,161 @@
 @use '../../scss/utils/functions'as fn;
 @use '../../scss/global/colors'as *;
 
-.people {
-    width: 100%;
+.People {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 
-    .imgContainer {
-        position: relative;
-        background-color: #000;
-        height: fn.rem(200);
+    .people {
+        width: 100%;
 
-        @media screen and (min-width:650px) {
-            height: fn.rem(250);
-        }
-
-        .backDrop {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .displayPic {
-            display: flex;
-            position: absolute;
-            top: 70%;
-            left: .65rem;
-            width: fn.rem(120);
-            height: fn.rem(120);
-            object-fit: cover;
-            border-radius: 50%;
-            padding: .3rem;
+        .imgContainer {
+            position: relative;
+            background-color: #000;
+            height: fn.rem(200);
 
             @media screen and (min-width:650px) {
-                width: fn.rem(150);
-                height: fn.rem(150);
-                left: 1rem;
+                height: fn.rem(250);
             }
 
-            @media screen and (min-width:1440px) {
-                width: fn.rem(200);
-                height: fn.rem(200);
-                top: 55%;
-            }
-        }
-    }
-
-    .personInfomation {
-        display: flex;
-        flex-direction: column;
-        margin: 3.8rem 0 0 .65rem;
-        gap: .8rem;
-
-        @media screen and (min-width:650px) {
-            margin-top: 4.8rem;
-            margin-left: 1rem;
-        }
-
-        @media screen and (min-width:1440px) {
-            margin-top: 5.2rem;
-        }
-
-
-        .at {
-            display: flex;
-            flex-direction: column;
-            line-height: fn.rem(-100);
-
-            .theAt {
-                opacity: .8;
-                font-family: $secondary-font;
+            .backDrop {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
             }
 
-            .name {
-                font-size: fn.rem(25);
+            .displayPic {
+                display: flex;
+                position: absolute;
+                top: 70%;
+                left: .65rem;
+                width: fn.rem(120);
+                height: fn.rem(120);
+                object-fit: cover;
+                border-radius: 50%;
+                padding: .3rem;
 
                 @media screen and (min-width:650px) {
-                    font-size: fn.rem(35);
+                    width: fn.rem(150);
+                    height: fn.rem(150);
+                    left: 1rem;
                 }
 
                 @media screen and (min-width:1440px) {
-                    font-size: fn.rem(40);
+                    width: fn.rem(200);
+                    height: fn.rem(200);
+                    top: 55%;
                 }
             }
         }
 
-
-        .other {
+        .personInfomation {
             display: flex;
             flex-direction: column;
-            gap: .3rem;
-
-            .dep {
-                font-weight: 300;
-                word-spacing: .5rem;
-            }
-
-            .icnPeople {
-                display: flex;
-
-                align-items: center;
-                gap: .5rem;
-
-                .icnicn {
-                    font-size: fn.rem(18);
-                }
-            }
-        }
-    }
-
-    .renderOption {
-        display: flex;
-        margin-top: 2rem;
-        justify-content: space-between;
-       
-
-        .options {
-            display: flex;
-            flex-direction: column;
+            margin: 3.8rem 0 0 .65rem;
             gap: .8rem;
-            padding: 1rem 1rem 0 1rem;
-            opacity: .5;
-            transition: all 500ms ease-in-out;
-            @media screen and (min-width:600px) {
-                padding: 1rem 3rem 0 3rem;
+
+            @media screen and (min-width:650px) {
+                margin-top: 4.8rem;
+                margin-left: 1rem;
             }
 
-            &:hover {
-                cursor: pointer;
-                background-color:rgba(255, 255, 255, .08);
+            @media screen and (min-width:1440px) {
+                margin-top: 5.2rem;
+            }
+
+
+            .at {
+                display: flex;
+                flex-direction: column;
+                line-height: fn.rem(-100);
+
+                .theAt {
+                    opacity: .8;
+                    font-family: $secondary-font;
+                }
+
+                .name {
+                    font-size: fn.rem(25);
+
+                    @media screen and (min-width:650px) {
+                        font-size: fn.rem(35);
+                    }
+
+                    @media screen and (min-width:1440px) {
+                        font-size: fn.rem(40);
+                    }
+                }
+            }
+
+
+            .other {
+                display: flex;
+                flex-direction: column;
+                gap: .3rem;
+
+                .dep {
+                    font-weight: 300;
+                    word-spacing: .5rem;
+                }
+
+                .icnPeople {
+                    display: flex;
+
+                    align-items: center;
+                    gap: .5rem;
+
+                    .icnicn {
+                        font-size: fn.rem(18);
+                    }
+                }
+            }
+        }
+
+        .renderOption {
+            display: flex;
+            margin-top: 2rem;
+            justify-content: space-between;
+
+
+            .options {
+                display: flex;
+                flex-direction: column;
+                gap: .8rem;
+                padding: 1rem 1rem 0 1rem;
+                opacity: .5;
+                transition: all 500ms ease-in-out;
+
+                @media screen and (min-width:600px) {
+                    padding: 1rem 3rem 0 3rem;
+                }
+
+                &:hover {
+                    cursor: pointer;
+                    background-color: rgba(255, 255, 255, .08);
+                    opacity: 1;
+                }
+
+                .indicator {
+                    width: 100%;
+                    height: 2px;
+                    background-color: $Primary-color;
+                }
+            }
+
+            .optionsAlt {
                 opacity: 1;
-            }
-
-            .indicator {
-                width: 100%;
-                height: 2px;
-                background-color: $Primary-color;
+                font-weight: 550;
             }
         }
 
-        .optionsAlt {
-            opacity: 1;
-            font-weight: 550;
+        .line {
+            width: 100%;
+            height: 1px;
+            background-color: #999;
+            margin-bottom: 1rem;
+            opacity: .5;
         }
-    }
 
-    .line {
-        width: 100%;
-        height: 1px;
-        background-color: #999;
-        margin-bottom: 1rem;
-        opacity: .5;
     }
-
 }
